Gave information about published Altiscale doc.

--- a/PySpark/PySpark_iPython_py26.ipynb
+++ b/PySpark/PySpark_iPython_py26.ipynb
@@ -19,12 +19,12 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "This article gives some examples of how to effectively use the iPython notebook with PySpark. Please refer to for instructions to set up iPython notebook for PySpark for an Altiscale cluster. This iPython notebook article demonstrates the following:  \n",
+      "This notebook gives some examples of how to effectively use the iPython notebook with PySpark. Please refer http://documentation.altiscale.com/using-spark-with-ipython for instructions to set up iPython notebook for PySpark for an Altiscale cluster. This iPython notebook article demonstrates the following:  \n",
       "1. IPython usage\n",
       "2. PySpark usage\n",
-      "    2.a Computation of approximate value of Pi.\n",
-      "    2.b Analysis of bay area bike trips dataset.\n",
-      "Note: This notebook is compiled using python 2.6 and the JSon format is not compatible with python 2.7 and above. You can still copy the code from this notebook to notebooks for python 2.7 and above, just do not try to open this notebook using ipython for python 2.7 and above."
+      "    (2.a) Computation of approximate value of Pi.\n",
+      "    (2.b) Analysis of bay area bike trips dataset.\n",
+      "Note: This notebook is compiled using python 2.6 and the json format is not compatible with python 2.7 and above. You can still copy the code from this notebook to notebooks for python 2.7 and above, just do not try to open this notebook using ipython for python 2.7 and above."
      ]
     },
     {
@@ -139,7 +139,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Check if the SparkContext is available. Note that it often happens that SparkContext is not available. In that case, you have to terminate your ipython session and start over again."
+      "Check if the SparkContext object is available. Note that often the SparkContext object is not available. In that case, you have to terminate your ipython session and start over again."
      ]
     },
     {
@@ -155,7 +155,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<pyspark.context.SparkContext object at 0x3182b90>\n"
+        "<pyspark.context.SparkContext object at 0x283ab90>\n"
        ]
       }
      ],
@@ -203,14 +203,14 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Analysis of San Francisco bike usage"
+      "Analysis of bay area bike trips dataset"
      ]
     },
     {
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "This section domonstrates how we analyzed the Bay Area bike share's trip data during the period September 2014 to August 2015. This dataset is available for download at http://www.bayareabikeshare.com/open-data. The dataset contains 4 .csv files, 1 each for station (details such as location), status (number of bikes & docks available), trip and weather conditions. Here, we made use of only the trip data. The .csv was converted to a JSon file as PySpark's sqlContext cannot read .csv file. "
+      "This section domonstrates how we analyzed the Bay Area bike share trips' data during the period September 2014 to August 2015. This dataset is available for download at http://www.bayareabikeshare.com/open-data. The dataset contains 4 .csv files, 1 each for station (details such as geo-location), status (number of bikes & docks available at a time), trip and weather conditions. Here, we made use of only the trip data. The .csv dataset file was converted to a json file as PySpark's sqlContext cannot read .csv file (https://github.com/databricks/spark-csv does not work for sqlContext). "
      ]
     },
     {
@@ -229,7 +229,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "The .json data is available for download at . I placed 201508_trip_data.json in my home directory in HDFS."
+      "We placed 201508_trip_data.json in my home directory in HDFS. Take care to specify correct path below."
      ]
     },
     {
@@ -329,7 +329,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "We select all those bike rides which start at either of the 2 stations near the San Francisco Caltrain station, San Francisco Caltrain 2 (330 Townsend)(Start_terminal = 69) or an Francisco Caltrain (Townsend at 4th) (Start_terminal = 70)."
+      "We select all the bike rides which start at either of the 2 stations near the San Francisco Caltrain station, San Francisco Caltrain 2 (330 Townsend)(Start_terminal = 69) or San Francisco Caltrain (Townsend at 4th) (Start_terminal = 70)."
      ]
     },
     {
@@ -379,7 +379,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "We group the trips starting from the San Francisco caltrain station by their End_station and get a count for each End_station."
+      "We group the trips starting from the San Francisco caltrain station by their End_station and get the total count of bike rides which end at each End_station."
      ]
     },
     {
@@ -397,7 +397,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "We see that most bike rides which start at the San Francisco Caltrain station end at Townsend and 7th and there are very few who biked all the way to San Antonio Caltrain station. "
+      "We see that most bike rides which start from the San Francisco Caltrain station end at Townsend and 7th and there are very few who biked all the way to San Antonio Caltrain station. "
      ]
     },
     {
