Made further chages

--- a/PySpark/PySpark_iPython_py26.ipynb
+++ b/PySpark/PySpark_iPython_py26.ipynb
@@ -19,12 +19,14 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "This notebook gives some examples of how to effectively use the iPython notebook with PySpark. Please refer http://documentation.altiscale.com/using-spark-with-ipython for instructions to set up iPython notebook for PySpark for an Altiscale cluster. This iPython notebook article demonstrates the following:  \n",
+      "This notebook gives some examples of how to effectively use the iPython notebook with PySpark. Please refer to http://documentation.altiscale.com/using-spark-with-ipython for instructions for setting up iPython notebook and PySpark for an Altiscale cluster. This iPython notebook article demonstrates the following:\n",
+      "\n",
       "1. IPython usage\n",
       "2. PySpark usage\n",
       "    (2.a) Computation of approximate value of Pi.\n",
       "    (2.b) Analysis of bay area bike trips dataset.\n",
-      "Note: This notebook is compiled using python 2.6 and the json format is not compatible with python 2.7 and above. You can still copy the code from this notebook to notebooks for python 2.7 and above, just do not try to open this notebook using ipython for python 2.7 and above."
+      "\n",
+      "Note: This notebook is compiled using python 2.6, and the json format is not compatible with python 2.7 and above. You can still copy the code from this notebook to notebooks for python 2.7 and above, just do not try to open this notebook using ipython for python 2.7 and above."
      ]
     },
     {
@@ -210,7 +212,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "This section domonstrates how we analyzed the Bay Area bike share trips' data during the period September 2014 to August 2015. This dataset is available for download at http://www.bayareabikeshare.com/open-data. The dataset contains 4 .csv files, 1 each for station (details such as geo-location), status (number of bikes & docks available at a time), trip and weather conditions. Here, we made use of only the trip data. The .csv dataset file was converted to a json file as PySpark's sqlContext cannot read .csv file (https://github.com/databricks/spark-csv does not work for sqlContext). "
+      "This section demonstrates how we analyzed the Bay Area bike share trips' data during the period September 2014 to August 2015. This dataset is available for download at http://www.bayareabikeshare.com/open-data. The dataset contains 4 .csv files, 1 each for station (details such as geo-location), status (number of bikes & docks available at a time), trip and weather conditions. Here, we made use of only the trip data. The .csv dataset file was converted to a json file as PySpark's sqlContext cannot read .csv file (https://github.com/databricks/spark-csv does not work for sqlContext)."
      ]
     },
     {
@@ -397,7 +399,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "We see that most bike rides which start from the San Francisco Caltrain station end at Townsend and 7th and there are very few who biked all the way to San Antonio Caltrain station. "
+      "We see that most bike rides which start from the San Francisco Caltrain station end at Townsend and 7th and there are very few who biked all the way to San Antonio Caltrain station."
      ]
     },
     {
